tests/snapshots/golden_python__python_mcp_server_py_all_four_schemes.snap
---
source: tests/golden_python.rs
expression: contents
---
"""Multi Scheme API MCP server — generated by mcpify. Do not hand-edit.

Wraps the official `mcp` Python SDK's `FastMCP` server, exposing exactly 3
tools — `search`, `get`, `call` — backed by `mcp_store.db`. Tool bodies
call into `..tools.search_tool`/`..tools.get_tool`/`..tools.call_tool`
(Story P6) and `..auth.auth_manager` (Story P4); this file only wires them
together and adds the logging/timing every tool call gets regardless of
which operation it is. A raised exception inside a tool function is
converted into an MCP error tool result by `FastMCP` itself — no manual
`CallToolResult` construction needed, unlike lower-level SDKs.
"""

from __future__ import annotations

import json
import time
from pathlib import Path
from typing import Any

from mcp.server.fastmcp import FastMCP

from ..auth.auth_manager import AuthManager
from ..data.store import get_endpoint, open_store
from ..tools.call_tool import call_operation
from ..tools.get_tool import get_operation
from ..tools.search_tool import search_operations
from . import logger as _logger_module
from .config import Config
from .errors import NotFoundError

log = _logger_module.get_logger(__name__)

INSTRUCTIONS = (
    "Exposes exactly 3 tools -- search, get, call -- backed by an embedded "
    "semantic database, so you never need the full API surface in context."
)


def build_server(db_path: Path, config: Config, auth_manager: AuthManager) -> FastMCP:
    mcp = FastMCP("Multi Scheme API", instructions=INSTRUCTIONS)

    @mcp.tool(
        description="Semantic search for Multi Scheme API operations using a natural-language query."
    )
    async def search(query: str, limit: int = 5) -> str:
        return await _run_tool(
            "search", db_path, lambda conn: search_operations(conn, query, limit)
        )

    @mcp.tool(
        description="Return the schema, path, method, and documentation for a specific Multi Scheme API operationId."
    )
    async def get(operation_id: str) -> str:
        return await _run_tool("get", db_path, lambda conn: get_operation(conn, operation_id))

    @mcp.tool(
        description="Validate arguments, invoke a live Multi Scheme API API operation, and validate the response."
    )
    async def call(operation_id: str, arguments: dict[str, Any] | None = None) -> str:
        async def run(conn: Any) -> Any:
            endpoint = await get_endpoint(conn, operation_id)
            if endpoint is None:
                raise NotFoundError(f"unknown operationId '{operation_id}'")
            return await call_operation(
                endpoint, config, auth_manager, operation_id, arguments or {}
            )

        return await _run_tool_async("call", db_path, run)

    return mcp


async def _run_tool(name: str, db_path: Path, fn: Any) -> str:
    async def run(conn: Any) -> Any:
        return await fn(conn)

    return await _run_tool_async(name, db_path, run)


async def _run_tool_async(name: str, db_path: Path, fn: Any) -> str:
    started_at = time.monotonic()
    async with open_store(db_path) as conn:
        result = await fn(conn)
    duration_ms = (time.monotonic() - started_at) * 1000
    log.info("tool executed", tool=name, duration_ms=round(duration_ms, 2))
    return json.dumps(result, indent=2)
