tests/snapshots/golden_python__python_pyproject_toml_all_four_schemes.snap
---
source: tests/golden_python.rs
expression: contents
---
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "out"
version = "0.1.0"
description = "Multi Scheme API MCP server, generated by mcpify."
readme = "README.md"

license = "MIT"

authors = []
keywords = []
requires-python = ">=3.11"
dependencies = [
  # <2.0: the SDK's 2.0.0 release renamed/moved FastMCP to
  # mcp.server.mcpserver.MCPServer, breaking the mcp.server.fastmcp import
  # this project's core/mcp_server.py.tera and http/server.py.tera rely on.
  # Pinned below that line rather than migrated, since 2.0's API surface
  # hasn't been audited for other breaking changes beyond the rename.
  "mcp>=1.12,<2.0",
  "aiosqlite>=0.20",
  "sqlite-vec>=0.1",
  "httpx>=0.27",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jsonschema>=4.23",
  "zstandard>=0.23",
  "structlog>=24.4",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
  "opentelemetry-exporter-prometheus>=0.48b0",
  "sentence-transformers>=3.1",
  "authlib>=1.3",
  "pydantic-settings>=2.5",
  "typer>=0.12",
  "questionary>=2.0",
  "keyring>=25.4",
  "pyyaml>=6.0",
  "cryptography>=43",
]

[project.scripts]
out = "out.cli:main"

[project.optional-dependencies]
# Opt-in memory profiling (scripts/profile.sh) — not installed by default
# `uv sync`, only `uv sync --extra profiling`. memray doesn't support
# Windows.
profiling = ["memray>=1.14"]

[tool.hatch.build.targets.wheel]
packages = ["src/out"]

[tool.hatch.build]
exclude = []

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "black>=24.10",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
